--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -24,7 +24,7 @@
   }
   .input {
     height: 50px;
-    border: 1px solid #d3d3d3;
+    border: 1px solid black;
     box-sizing: border-box;
     flex-grow: 1;
     padding: 15px;
@@ -36,8 +36,9 @@
     padding: 0 16px;
   }
   .icons {
-    background-color: gray;
-    padding: 13px;
+    background-color: #f8f8f8;
+    padding: 12px 15px;
+    border: 1px solid black;
   }
 }
 @media screen and (max-width: 950px) {
