--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
+  z-index: 5;
   .img {
     background-image: url("https://drive.google.com/file/d/1a6CX6A_wKPmCrA1IA7ja7g93qauCYuaj/view");
   }
