--- a/src/components/Video/Video.module.scss
+++ b/src/components/Video/Video.module.scss
@@ -1,7 +1,10 @@
 .video {
-  margin-left: 200px;
   display: flex;
-  font-family: sans-serif;
+  flex: 1;
+  max-width: 1500px;
+  .videoImg {
+    width: 95%;
+  }
   iframe {
     cursor: pointer;
   }
@@ -22,5 +25,24 @@
   margin: 5px 0;
   &:hover {
     transform: translateY(-5px);
+  }
+}
+.center {
+  display: flex;
+  justify-content: center;
+}
+.margin {
+  margin-left: 200px;
+}
+@media screen and (max-width: 1100px) {
+  .side {
+    display: none;
+  }
+  .video {
+    width: 100%;
+    margin: 0 auto;
+    iframe {
+      height: 400px;
+    }
   }
 }
