--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,6 +1,6 @@
 .main {
-  font-family: sans-serif;
   margin-left: 200px;
+  font-family: sans-serif;
   display: grid;
   width: 100%;
   row-gap: 40px;
@@ -8,8 +8,8 @@
 
   grid-template-columns: repeat(auto-fit, minmax(300px, auto));
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1100px) {
   .main {
-    margin: 0;
+    margin: 0 auto;
   }
 }
