--- a/src/components/Video/Video.module.scss
+++ b/src/components/Video/Video.module.scss
@@ -4,6 +4,11 @@
   max-width: 1500px;
   .videoImg {
     width: 95%;
+    h2,
+    h3,
+    span {
+      margin: 15px;
+    }
   }
   iframe {
     cursor: pointer;
@@ -39,10 +44,12 @@
     display: none;
   }
   .video {
+    text-align: center;
     width: 100%;
     margin: 0 auto;
     iframe {
       height: 400px;
+      margin-left: 16px;
     }
   }
 }
