--- a/src/components/Video/Video.module.scss
+++ b/src/components/Video/Video.module.scss
@@ -26,8 +26,15 @@
     display: flex;
     margin: 20px;
     img {
-      height: 100px;
-      width: 100px;
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      margin-right: 20px;
+    }
+    .userChat {
+      p {
+        margin: 0;
+      }
     }
   }
 }
