--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -10,6 +10,7 @@
   justify-content: space-between;
   box-sizing: border-box;
   z-index: 5;
+  transition: all 1s;
 
   .img {
     background-image: url("https://drive.google.com/file/d/1a6CX6A_wKPmCrA1IA7ja7g93qauCYuaj/view");
