--- a/src/components/Main/MainList.module.scss
+++ b/src/components/Main/MainList.module.scss
@@ -1,12 +1,23 @@
 .box {
   border: 1px solid black;
   transition: 0.5s all;
+  min-height: 300px;
+  max-height: 300px;
   cursor: pointer;
   box-shadow: 3px 3px 3px 3px gray;
   .img {
     width: 100%;
-
+    max-height: 180px;
     transition: 0.2s all;
+  }
+  p:nth-child(1) {
+    width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    margin: 0;
   }
   &:hover {
     transform: translateY(-10px);
