--- a/src/components/Main/MainList.module.scss
+++ b/src/components/Main/MainList.module.scss
@@ -1,14 +1,15 @@
 .box {
-  border: 1px solid black;
   transition: 0.5s all;
-  min-height: 300px;
-  max-height: 300px;
+  min-height: 330px;
+  max-height: 330px;
   cursor: pointer;
   box-shadow: 3px 3px 3px 3px gray;
+  border-radius: 15%;
   .img {
     width: 100%;
     max-height: 180px;
     transition: 0.2s all;
+    border-radius: 15% 15% 0% 0%;
   }
   p:nth-child(1) {
     width: 200px;
@@ -25,11 +26,19 @@
 
   .bottomBox {
     display: flex;
+    align-items: center;
+    div {
+      margin: 5px;
+    }
     .channelImg {
       border-radius: 50%;
       width: 50px;
       height: 50px;
       margin: 10px;
+    }
+    p {
+      margin-top: 0.3em;
+      margin-bottom: 0.1em;
     }
   }
 }
