--- a/src/components/Tap/Tap.module.scss
+++ b/src/components/Tap/Tap.module.scss
@@ -6,12 +6,12 @@
     width: 100%;
     margin: 0;
     padding: 0;
+
     & :hover {
-      background-color: gray;
+      background-color: #ff0000;
     }
   }
   color: black;
-  border: 1px solid black;
   width: 200px;
   height: 100vh;
   position: fixed;
@@ -19,17 +19,17 @@
     padding: 10px 0;
     text-align: center;
     list-style: none;
-    border: 1px solid black;
     text-decoration: none;
   }
   .link {
-    justify-content: center;
+    justify-content: flex-start;
     display: flex;
     height: 50px;
     padding: 0 24px;
     color: black;
     font-size: 15px;
     align-items: center;
+    font-family: sans-serif;
   }
 }
 @media screen and (max-width: 1100px) {
