--- a/src/components/Video/Video.module.scss
+++ b/src/components/Video/Video.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex: 1;
   max-width: 1500px;
+
   .videoImg {
     width: 95%;
     h2,
@@ -107,5 +108,14 @@
       height: 400px;
       margin-left: 16px;
     }
+  }
+}
+@media screen and (min-width: 1100px) {
+  .video {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .margin {
+    margin-left: 200px;
   }
 }
