[add] list - border

--- a/src/components/Tap/Tap.module.scss
+++ b/src/components/Tap/Tap.module.scss
@@ -20,6 +20,7 @@
     text-align: center;
     list-style: none;
     text-decoration: none;
+    border-bottom: 1px solid black;
   }
   .link {
     justify-content: flex-start;
