--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -11,6 +11,7 @@
   box-sizing: border-box;
   z-index: 5;
   transition: all 1s;
+  border-bottom: 1px solid black;
 
   .img {
     background-image: url("https://drive.google.com/file/d/1a6CX6A_wKPmCrA1IA7ja7g93qauCYuaj/view");
